src/org/ffmpeg/swresample/SwresampleLibrary.java

	/**
	 * Convert the next timestamp from input to output<br>
	 * timestamps are in 1/(in_sample_rate * out_sample_rate) units.<br>
	 * * @note There are 2 slightly differently behaving modes.<br>
	 *       @li When automatic timestamp compensation is not used, (min_compensation >= FLT_MAX)<br>
	 *              in this case timestamps will be passed through with delays compensated<br>
	 *       @li When automatic timestamp compensation is used, (min_compensation < FLT_MAX)<br>
	 *              in this case the output timestamps will match output sample numbers.<br>
	 *              See ffmpeg-resampler(1) for the two modes of compensation.<br>
	 * * @param s[in]     initialized Swr context<br>
	 * @param pts[in]   timestamp for the next input sample, INT64_MIN if unknown<br>
	 * @see swr_set_compensation(), swr_drop_output(), and swr_inject_silence() are<br>
	 *      function used internally for timestamp compensation.<br>
	 * @return the output timestamp for the next output sample<br>
	 * Original signature : <code>int64_t swr_next_pts(SwrContext*, int64_t)</code><br>
	 * <i>native declaration : libswresample/swresample.h:141</i>
	 */
	public static long swr_next_pts(Pointer<SwresampleLibrary.SwrContext > s, long pts) {
		return swr_next_pts(Pointer.getPeer(s), pts);
	}
	protected native static long swr_next_pts(@Ptr long s, long pts);
	/**
	 * Activate resampling compensation ("soft" compensation). This function is<br>
	 * internally called when needed in swr_next_pts().<br>
	 * * @param[in,out] s             allocated Swr context. If it is not initialized,<br>
	 *                              or SWR_FLAG_RESAMPLE is not set, swr_init() is<br>
	 *                              called with the flag set.<br>
	 * @param[in]     sample_delta  delta in PTS per sample<br>
	 * @param[in]     compensation_distance number of samples to compensate for<br>
	 * @return    >= 0 on success, AVERROR error codes if:<br>
	 *            @li @c s is NULL,<br>
	 *            @li @c compensation_distance is less than 0,<br>
	 *            @li @c compensation_distance is 0 but sample_delta is not,<br>
	 *            @li compensation unsupported by resampler, or<br>
	 *            @li swr_init() fails when called.<br>
	 * Original signature : <code>int swr_set_compensation(SwrContext*, int, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:158</i>
	 */
	public static int swr_set_compensation(Pointer<SwresampleLibrary.SwrContext > s, int sample_delta, int compensation_distance) {
		return swr_set_compensation(Pointer.getPeer(s), sample_delta, compensation_distance);
	}
	protected native static int swr_set_compensation(@Ptr long s, int sample_delta, int compensation_distance);
	/**
	 * Set a customized input channel mapping.<br>
	 * * @param[in,out] s           allocated Swr context, not yet initialized<br>
	 * @param[in]     channel_map customized input channel mapping (array of channel<br>
	 *                            indexes, -1 for a muted channel)<br>
	 * @return >= 0 on success, or AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_channel_mapping(SwrContext*, const int*)</code><br>
	 * <i>native declaration : libswresample/swresample.h:167</i>
	 */
	public static int swr_set_channel_mapping(Pointer<SwresampleLibrary.SwrContext > s, Pointer<Integer > channel_map) {
		return swr_set_channel_mapping(Pointer.getPeer(s), Pointer.getPeer(channel_map));
	}
	protected native static int swr_set_channel_mapping(@Ptr long s, @Ptr long channel_map);
	/**
	 * Set a customized remix matrix.<br>
	 * * @param s       allocated Swr context, not yet initialized<br>
	 * @param matrix  remix coefficients; matrix[i + stride * o] is<br>
	 *                the weight of input channel i in output channel o<br>
	 * @param stride  offset between lines of the matrix<br>
	 * @return  >= 0 on success, or AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_matrix(SwrContext*, const double*, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:177</i>
	 */
	public static int swr_set_matrix(Pointer<SwresampleLibrary.SwrContext > s, Pointer<Double > matrix, int stride) {
		return swr_set_matrix(Pointer.getPeer(s), Pointer.getPeer(matrix), stride);
	}
	protected native static int swr_set_matrix(@Ptr long s, @Ptr long matrix, int stride);
	/**
	 * Drops the specified number of output samples.<br>
	 * * This function, along with swr_inject_silence(), is called by swr_next_pts()<br>
	 * if needed for "hard" compensation.<br>
	 * * @param s     allocated Swr context<br>
	 * @param count number of samples to be dropped<br>
	 * * @return >= 0 on success, or a negative AVERROR code on failure<br>
	 * Original signature : <code>int swr_drop_output(SwrContext*, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:187</i>
	 */
	public static int swr_drop_output(Pointer<SwresampleLibrary.SwrContext > s, int count) {
		return swr_drop_output(Pointer.getPeer(s), count);
	}
	protected native static int swr_drop_output(@Ptr long s, int count);
	/**
	 * Injects the specified number of silence samples.<br>
	 * * This function, along with swr_drop_output(), is called by swr_next_pts()<br>
	 * if needed for "hard" compensation.<br>
	 * * @param s     allocated Swr context<br>
	 * @param count number of samples to be dropped<br>
	 * * @return >= 0 on success, or a negative AVERROR code on failure<br>
	 * Original signature : <code>int swr_inject_silence(SwrContext*, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:197</i>
	 */
	public static int swr_inject_silence(Pointer<SwresampleLibrary.SwrContext > s, int count) {
		return swr_inject_silence(Pointer.getPeer(s), count);
	}
	protected native static int swr_inject_silence(@Ptr long s, int count);
	/**
	 * Gets the delay the next input sample will experience relative to the next output sample.<br>
	 * * Swresample can buffer data if more input has been provided than available<br>
	 * output space, also converting between sample rates needs a delay.<br>
	 * This function returns the sum of all such delays.<br>
	 * The exact delay is not necessarily an integer value in either input or<br>
	 * output sample rate. Especially when downsampling by a large value, the<br>
	 * output sample rate may be a poor choice to represent the delay, similarly<br>
	 * for upsampling and the input sample rate.<br>
	 * * @param s     swr context<br>
	 * @param base  timebase in which the returned delay will be:<br>
	 *              @li if it's set to 1 the returned delay is in seconds<br>
	 *              @li if it's set to 1000 the returned delay is in milliseconds<br>
	 *              @li if it's set to the input sample rate then the returned<br>
	 *                  delay is in input samples<br>
	 *              @li if it's set to the output sample rate then the returned<br>
	 *                  delay is in output samples<br>
	 *              @li if it's the least common multiple of in_sample_rate and<br>
	 *                  out_sample_rate then an exact rounding-free delay will be<br>
	 *                  returned<br>
	 * @returns     the delay in 1 / @c base units.<br>
	 * Original signature : <code>int64_t swr_get_delay(SwrContext*, int64_t)</code><br>
	 * <i>native declaration : libswresample/swresample.h:221</i>
	 */
	public static long swr_get_delay(Pointer<SwresampleLibrary.SwrContext > s, long base) {
		return swr_get_delay(Pointer.getPeer(s), base);
	}
	protected native static long swr_get_delay(@Ptr long s, long base);
	/**
	 * Find an upper bound on the number of samples that the next swr_convert<br>
	 * call will output, if called with in_samples of input samples. This<br>
	 * depends on the internal state, and anything changing the internal state<br>
	 * (like further swr_convert() calls) will may change the number of samples<br>
	 * swr_get_out_samples() returns for the same number of input samples.<br>
	 * * @param in_samples    number of input samples.<br>
	 * @note any call to swr_inject_silence(), swr_convert(), swr_next_pts()<br>
	 *       or swr_set_compensation() invalidates this limit<br>
	 * @note it is recommended to pass the correct available buffer size<br>
	 *       to all functions like swr_convert() even if swr_get_out_samples()<br>
	 *       indicates that less would be used.<br>
	 * @returns an upper bound on the number of samples that the next swr_convert<br>
	 *          will output or a negative value to indicate an error<br>
	 * Original signature : <code>int swr_get_out_samples(SwrContext*, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:238</i>
	 */
	public static int swr_get_out_samples(Pointer<SwresampleLibrary.SwrContext > s, int in_samples) {
		return swr_get_out_samples(Pointer.getPeer(s), in_samples);
	}
	protected native static int swr_get_out_samples(@Ptr long s, int in_samples);
	/**
	 * Return the @ref LIBSWRESAMPLE_VERSION_INT constant.<br>
	 * * This is useful to check if the build-time libswresample has the same version<br>
	 * as the run-time one.<br>
	 * * @returns     the unsigned int-typed version<br>
	 * Original signature : <code>int swresample_version()</code><br>
	 * <i>native declaration : libswresample/swresample.h:246</i>
	 */
	public static native int swresample_version();
	/**
	 * Return the swr build-time configuration.<br>
	 * * @returns     the build-time @c ./configure flags<br>
	 * Original signature : <code>char* swresample_configuration()</code><br>
	 * <i>native declaration : libswresample/swresample.h:252</i>
	 */
	public static Pointer<Byte > swresample__configuration() {
		return Pointer.pointerToAddress(swresample_configuration(), Byte.class);
	}
	@Ptr 
	protected native static long swresample_configuration();
	/**
	 * Return the swr license.<br>
	 * * @returns     the license of libswresample, determined at build-time<br>
	 * Original signature : <code>char* swresample_license()</code><br>
	 * <i>native declaration : libswresample/swresample.h:258</i>
	 */
	public static Pointer<Byte > swresample__license() {
		return Pointer.pointerToAddress(swresample_license(), Byte.class);
	}
	@Ptr 
	protected native static long swresample_license();
